fix labelled alignment for textareas

--- a/src/stylus/modules/labelled.styl
+++ b/src/stylus/modules/labelled.styl
@@ -50,7 +50,7 @@ FIELD_LABEL_OVERLAP = 0.3rem
 
 .sheet-labelled__label
     display flex
-    align-items flex-start
+    align-items flex-end
 
     position absolute
     top 0
@@ -61,6 +61,7 @@ FIELD_LABEL_OVERLAP = 0.3rem
 
     border 1px solid transparent
     padding-top (HEIGHT - FIELD_LABEL_OVERLAP)
+    padding-bottom 0.1rem
 
     color FADED_GRAY
     font-size FIELD_LABEL_FONT_SIZE
